--- a/core/modules/system/system.routing.yml
+++ b/core/modules/system/system.routing.yml
@@ -324,6 +324,13 @@ system.theme_settings:
   requirements:
     _permission: 'administer themes'
 
+system.theme_settings_theme:
+  pattern: '/admin/appearance/settings/{theme_name}'
+  defaults:
+    _form: '\Drupal\system\Form\ThemeSettingsForm'
+  requirements:
+    _permission: 'administer themes'
+
 '<front>':
   path: '/'
   requirements:
