--- a/core/modules/comment/comment.local_tasks.yml
+++ b/core/modules/comment/comment.local_tasks.yml
@@ -1,15 +1,15 @@
-comment_permalink_tab:
-  route_name: comment_permalink
+comment.permalink:
+  route_name: comment.permalink
   title: 'View comment'
-  tab_root_id: comment_permalink_tab
-comment_edit_page_tab:
-  route_name: comment_edit_page
+  tab_root_id: comment.permalink
+comment.edit_page:
+  route_name: comment.edit_page
   title: 'Edit'
-  tab_root_id: comment_permalink_tab
+  tab_root_id: comment.permalink
   weight: 0
-comment_confirm_delete_tab:
-  route_name: comment_confirm_delete
+comment.confirm_delete:
+  route_name: comment.confirm_delete
   title: 'Delete'
-  tab_root_id: comment_permalink_tab
+  tab_root_id: comment.permalink
   weight: 10
 
