--- a/core/modules/block/block.routing.yml
+++ b/core/modules/block/block.routing.yml
@@ -31,6 +31,14 @@ block.admin_display:
   requirements:
     _permission: 'administer blocks'
 
+block.admin_display_theme:
+  path: 'admin/structure/block/list/{theme_name}'
+  defaults:
+    _controller: '\Drupal\block\Controller\BlockListController::listing'
+  requirements:
+    _access_theme: 'TRUE'
+    _permission: 'administer blocks'
+
 block.admin_add:
   path: '/admin/structure/block/add/{plugin_id}/{theme}'
   defaults:
