--- a/core/modules/views_ui/views_ui.local_tasks.yml
+++ b/core/modules/views_ui/views_ui.local_tasks.yml
@@ -20,3 +20,8 @@ views_ui_list_tab:
   route_name: views_ui.list
   title: List
   tab_root_id: views_ui_list_tab
+
+views_ui.reports_fields:
+  title: 'Used in views'
+  route_name: views_ui.reports_fields
+  tab_root_id: field_ui.list
