--- a/core/modules/block/block.local_tasks.yml
+++ b/core/modules/block/block.local_tasks.yml
@@ -4,8 +4,13 @@ block.admin_edit:
   tab_root_id: block.admin_edit
 
 # Per theme block layout pages.
+block.admin_display:
+  route_name: block.admin_display
+  title: 'Block Layout'
+  tab_root_id: block.admin_display
 block.admin_display_theme:
   route_name: block.admin_display_theme
   title: 'Block Layout'
-  tab_root_id: block.admin_display_theme
+  tab_root_id: block.admin_display
+  tab_parent_id: block.admin_display
   derivative: 'Drupal\block\Plugin\Derivative\ThemeLocalTask'
