Convert some node related local tasks

--- a/core/modules/book/book.local_tasks.yml
+++ b/core/modules/book/book.local_tasks.yml
@@ -7,3 +7,9 @@ book.settings:
   title: 'Settings'
   tab_root_id: book.admin
   weight: 100
+
+book.outline:
+  route_name: book.outline
+  tab_root_id: node.view
+  title: Outline
+  weight: 2
