--- a/core/modules/system/system.local_tasks.yml
+++ b/core/modules/system/system.local_tasks.yml
@@ -25,3 +25,26 @@ system.theme_settings_theme:
   tab_root_id: system.themes_page
   tab_parent_id: system.theme_settings
   derivative: Drupal\system\Plugin\Derivative\ThemeLocalTask
+
+system.modules_list:
+  route_name: system.modules_list
+  tab_root_id: system.modules_list
+  title: 'List'
+
+system.modules_uninstall:
+  route_name: system.modules_uninstall
+  tab_root_id: system.modules_list
+  title: 'Uninstall'
+  weight: 20
+
+system.admin:
+  route_name: system.admin
+  tab_root_id: system.admin
+  title: Tasks
+  weight: -20
+system.admin_index:
+  route_name: system.admin_index
+  tab_root_id: system.admin
+  title: Index
+  weight: -18
+
