--- a/.htaccess
+++ b/.htaccess
@@ -26,7 +26,7 @@ DirectoryIndex index.php index.html index.htm
 
 # Override PHP settings that cannot be changed at runtime. See
 # sites/default/default.settings.php and
-# Drupal\Core\DrupalKernelFactory::bootEnvironment() for settings that can be
+# Drupal\Core\DrupalKernel::bootEnvironment() for settings that can be
 # changed at runtime.
 
 # PHP 5, Apache 1 and 2.
